--- a/index.html
+++ b/index.html
@@ -29,53 +29,45 @@
 
     <link rel="stylesheet" type="text/css" href="Css/_reset.css">
     <link rel="stylesheet" type="text/css" href="Css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="Css/bootstrap.rtl.css">
     <link rel="stylesheet" type="text/css" href="Css/_grid.css">
     <link rel="stylesheet" type="text/css" href="Css/_base.css">
     <link rel="stylesheet" type="text/css" href="Css/_section.css">
     <link rel="stylesheet" type="text/css" href="Css/_typography.css">
+    <link rel="stylesheet" type="text/css" href="Css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="Css/_button.css">
     <link rel="stylesheet" type="text/css" href="Css/_color.css">
+    <link rel="stylesheet" type="text/css" href="Css/_dashboard.css">
     <link rel="stylesheet" type="text/css" href="Css/_homepage.css">
 
   </head>
   <body class="homepage nav-fixed" ng-app="iHandyApp">
+
     <div class="body-container">
-      <div class="header-container">
-        <div class="header">
-          <div class="header-wrapper container">
-            <div class="row clearfix">
-              <div class="col-md-3 header-left">
-                <a href="#" class="button button-radius_circle download-button">
-                  <span>دانلود اپلیکیشن</span>
-                </a>
-              </div>
-              <div class="col-md-3 header-right">
-                <a href="#" class="logo">
-                  <div class="logo-icon">
-                    <img src="Images/logo.png" alt="ihandy">
-                  </div>
-                  <div class="logo-typography">
-                    <span>ihandy</span>
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-3 header-center"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div ng-view=""></div>
+
+      <home-header ng-hide="vm.isLoggedIn"></home-header>
+
+      <ui-view></ui-view>
+
+      <home-footer ng-hide="vm.isLoggedIn"></home-footer>
+
     </div>
+
+
 
 
   <script src="Vendor/angular/angular.min.js"></script>
   <script src="Vendor/angular-resource/angular-resource.min.js"></script>
-  <script src="Vendor/angular-route/angular-route.min.js"></script>
+  <script src="Vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="Script/app.js"></script>
+  <script src="Script/Routes/routes.js"></script>
   <script src="Script/Services/apiPath.js"></script>
   <script src="Script/Services/currentUser.js"></script>
   <script src="Script/Services/userAccount.js"></script>
-  <script src="Script/Routes/routes.js"></script>
-  <script src="Script/userController.js"></script>
+  <script src="Script/Controllers/userController.js"></script>
+  <script src="Script/Directives/home-header.js"></script>
+  <script src="Script/Directives/home-footer.js"></script>
+  <script src="Vendor/jquery/jquery-3.2.1.min.js"></script>
+  <script src="Vendor/jquery/jquery.sticky-kit.min.js"></script>
   </body>
 </html>
